changed tmux side window size

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,7 +17,7 @@ bind -n C-space     last-window
 bind -n C-w         confirm-before kill-pane
 
 
-bind / resize-pane -x 79
+bind / resize-pane -x 60 -y 15
 bind , resize-pane -L 15
 bind . resize-pane -R 15
 bind - resize-pane -D 15
