cleanup zshrc, make tmux.conf work with tmux 3.0a

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -23,9 +23,9 @@ bind . resize-pane -R 15
 bind - resize-pane -D 15
 bind + resize-pane -U 15
 
-# ----------------------
-# Status Bar
-# -----------------------
+## ----------------------
+## Status Bar
+## -----------------------
 set -g status-bg black
 set -g status-fg white
 set -g status-interval 5               # set update frequencey (default 15 seconds)
@@ -33,17 +33,7 @@ set -g status-justify centre           # center window list for clarity
 set -g status-left '#h'
 set -g status-right '#[fg=blue]%a %b %d, %Y #[fg=white]%H:%M' 
 
-set-window-option -g window-status-current-bg green
-set-window-option -g window-status-current-fg black
-
-set -g pane-border-fg green
-set -g pane-active-border-fg green
-
 set-option -g default-shell /bin/zsh
-bind -n F1 source-file ~/projects/my_ide/tmux/F-keys/f1
-bind -n C-e source-file ~/projects/my_ide/tmux/F-keys/rep_last_command
-bind -n C-g source-file ~/projects/my_ide/tmux/F-keys/run_python_lines_in_tmux
-bind -n C-q source-file ~/projects/my_ide/tmux/F-keys/cancle_run
 
 set -sg escape-time 0 # remove delay after pressing <esc>
 set-option -ga terminal-overrides ",xterm-256color:Tc"
